[package]
name = "pi-rats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10.1"
bevy-inspector-egui = "0.18.3"
rand = "0.8.5"
bevy_ggrs = { version = "0.12", features = ["wasm-bindgen"] }
bevy_matchbox = { version = "0.6", features = ["ggrs"] }

