[package]
name = "pi-rats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-codec = "0.5.1"
actix-rt = "2.8.0"
awc = "3.1.1"
bevy = "0.10.1"
bevy-inspector-egui = "0.18.3"
futures-util = "0.3.28"
rand = "0.8.5"
tokio = "1.29.1"
tokio-stream = "0.1.14"

